Fixed footers in dialogs getting weird links. Fixed options for a select getting cut off on short screens when used in dialogs.

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -1181,7 +1181,7 @@
 	.bigtree_dialog_form textarea { display: block; width: 418px; }
 	.bigtree_dialog_form p.confirm { font-size: 14px; padding: 20px; }
 	.bigtree_dialog_form hr { background: #ccc; border: none; height: 1px; margin: 0px -20px 15px -20px; }
-	.bigtree_dialog_form footer a { margin: 0 10px 0 0; }
+	.bigtree_dialog_form > footer a { margin: 0 10px 0 0; }
 
 	.bigtree_dialog_form .image_attr { overflow: hidden; }
 	.bigtree_dialog_form .image_attr ul { list-style: none; margin: 0; overflow: hidden; }
